Improved Debug CPU: 
-now it highlights which registers will be modified by the opcode at the cursor position
-added t-states counter on default view

Improved ZX Vision:
-ZX Desktop: allow to set a background SCR file
-ZX Desktop: added setting to disable ZX Desktop when going to full screen 
-Better detection of any file size of 6912 bytes is guessed as Spectrum screen
-Added AmigaOS GUI style
-Improve RetroMac GUI style: striped title bar
-Improve BeOS GUI style: buttons positions right after the title

Fixed disabling border when realvideo enabled on machines: Colecovision, Master System, MSX, SG1000, SpectraVideo
Fixed segfault pressing F5 after pressing pause key
Fixed preserve breakpoints state when doing smartload
Fixed refreshing Visual Real Tape window when Top Speed condition
Fixed drawing close button on background windows

Some other minor bugfixes and improvements



Version 10.0 - Clive Sinclair edition. 4 October 2021

There are lots of changes in this version, but some of them are remarkable:

- New machine emulated: Sega Master System
- "Time machine" features: Automatic Snapshots to RAM + Rewind feature, backwards debugging, backwards run
- Realtime translation of text adventure games in a ZEsarUX window
- Can render any image from a Speccy Text Adventure (supported parsers: Quill, Paws, Daad, Gac)
- Added Visual Real Tape. Now you can have an audio render of your tape, see tape blocks and rewind or move forward the cassette player 
- Can now browse Basic variables on ZX Spectrum, ZX81 and ZX80
- Allow customize upper buttons to actions
- Added Window View Sensors to graph internal emulation sensors, performance, statistics, etc
- Added menu language selection between default (English) and Spanish. Only some texts are translated to Spanish


The full changelog for this version 10.0 is:

Added Sega Master System emulation
Added .sms file viewer
Added midi output and .mid support for QL and SN audio chips (Master System, SG1000, etc)