@@ -36,6 +36,7 @@ struct s_charset_list charset_list[]={
     {"QL",char_set_ql},
     {"RetroMac",char_set_retromac},
     {"AmigaOS",char_set_amigaos},
+    {"AtariTOS",char_set_ataritos},
     {"MSX",char_set_msx},
     {"BeOS",char_set_beos},
     {"",NULL}
@@ -2084,6 +2085,140 @@ unsigned char char_set_amigaos[TOTAL_ASCII_CHARSET_ELEMENTS]={
 };
 
 
+//TODO: en realidad esta fuente es de CPC
+unsigned char char_set_ataritos[TOTAL_ASCII_CHARSET_ELEMENTS]={ 
+0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x18,0x18,0x18,0x18,0x18,0x00,0x18,0x00
+,0x6c,0x6c,0x6c,0x00,0x00,0x00,0x00,0x00,0x6c,0x6c,0xfe,0x6c,0xfe,0x6c,0x6c,0x00
+,0x18,0x3e,0x58,0x3c,0x1a,0x7c,0x18,0x00,0x00,0xc6,0xcc,0x18,0x30,0x66,0xc6,0x00
+,0x38,0x6c,0x38,0x76,0xdc,0xcc,0x76,0x00,0x18,0x18,0x30,0x00,0x00,0x00,0x00,0x00
+,0x0c,0x18,0x30,0x30,0x30,0x18,0x0c,0x00,0x30,0x18,0x0c,0x0c,0x0c,0x18,0x30,0x00
+,0x00,0x66,0x3c,0xff,0x3c,0x66,0x00,0x00,0x00,0x18,0x18,0x7e,0x18,0x18,0x00,0x00
+,0x00,0x00,0x00,0x00,0x00,0x18,0x18,0x30,0x00,0x00,0x00,0x7e,0x00,0x00,0x00,0x00
+,0x00,0x00,0x00,0x00,0x00,0x18,0x18,0x00,0x06,0x0c,0x18,0x30,0x60,0xc0,0x80,0x00
+,0x7c,0xc6,0xce,0xd6,0xe6,0xc6,0x7c,0x00,0x18,0x38,0x18,0x18,0x18,0x18,0x7e,0x00
+,0x3c,0x66,0x06,0x3c,0x60,0x66,0x7e,0x00,0x3c,0x66,0x06,0x1c,0x06,0x66,0x3c,0x00
+,0x1c,0x3c,0x6c,0xcc,0xfe,0x0c,0x1e,0x00,0x7e,0x62,0x60,0x7c,0x06,0x66,0x3c,0x00
+,0x3c,0x66,0x60,0x7c,0x66,0x66,0x3c,0x00,0x7e,0x66,0x06,0x0c,0x18,0x18,0x18,0x00
+,0x3c,0x66,0x66,0x3c,0x66,0x66,0x3c,0x00,0x3c,0x66,0x66,0x3e,0x06,0x66,0x3c,0x00
+,0x00,0x00,0x18,0x18,0x00,0x18,0x18,0x00,0x00,0x00,0x18,0x18,0x00,0x18,0x18,0x30
+,0x0c,0x18,0x30,0x60,0x30,0x18,0x0c,0x00,0x00,0x00,0x7e,0x00,0x00,0x7e,0x00,0x00
+,0x60,0x30,0x18,0x0c,0x18,0x30,0x60,0x00,0x3c,0x66,0x66,0x0c,0x18,0x00,0x18,0x00
+,0x7c,0xc6,0xde,0xde,0xde,0xc0,0x7c,0x00,0x18,0x3c,0x66,0x66,0x7e,0x66,0x66,0x00
+,0xfc,0x66,0x66,0x7c,0x66,0x66,0xfc,0x00,0x3c,0x66,0xc0,0xc0,0xc0,0x66,0x3c,0x00
+,0xf8,0x6c,0x66,0x66,0x66,0x6c,0xf8,0x00,0xfe,0x62,0x68,0x78,0x68,0x62,0xfe,0x00
+,0xfe,0x62,0x68,0x78,0x68,0x60,0xf0,0x00,0x3c,0x66,0xc0,0xc0,0xce,0x66,0x3e,0x00
+,0x66,0x66,0x66,0x7e,0x66,0x66,0x66,0x00,0x7e,0x18,0x18,0x18,0x18,0x18,0x7e,0x00
+,0x1e,0x0c,0x0c,0x0c,0xcc,0xcc,0x78,0x00,0xe6,0x66,0x6c,0x78,0x6c,0x66,0xe6,0x00
+,0xf0,0x60,0x60,0x60,0x62,0x66,0xfe,0x00,0xc6,0xee,0xfe,0xfe,0xd6,0xc6,0xc6,0x00
+,0xc6,0xe6,0xf6,0xde,0xce,0xc6,0xc6,0x00,0x38,0x6c,0xc6,0xc6,0xc6,0x6c,0x38,0x00
+,0xfc,0x66,0x66,0x7c,0x60,0x60,0xf0,0x00,0x38,0x6c,0xc6,0xc6,0xda,0xcc,0x76,0x00
+,0xfc,0x66,0x66,0x7c,0x6c,0x66,0xe6,0x00,0x3c,0x66,0x60,0x3c,0x06,0x66,0x3c,0x00
+,0x7e,0x5a,0x18,0x18,0x18,0x18,0x3c,0x00,0x66,0x66,0x66,0x66,0x66,0x66,0x3c,0x00
+,0x66,0x66,0x66,0x66,0x66,0x3c,0x18,0x00,0xc6,0xc6,0xc6,0xd6,0xfe,0xee,0xc6,0x00
+,0xc6,0x6c,0x38,0x38,0x6c,0xc6,0xc6,0x00,0x66,0x66,0x66,0x3c,0x18,0x18,0x3c,0x00
+,0xfe,0xc6,0x8c,0x18,0x32,0x66,0xfe,0x00,0x3c,0x30,0x30,0x30,0x30,0x30,0x3c,0x00
+,0xc0,0x60,0x30,0x18,0x0c,0x06,0x02,0x00,0x3c,0x0c,0x0c,0x0c,0x0c,0x0c,0x3c,0x00
+,0x18,0x3c,0x7e,0x18,0x18,0x18,0x18,0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,0xff
+,0x30,0x18,0x0c,0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x78,0x0c,0x7c,0xcc,0x76,0x00
+,0xe0,0x60,0x7c,0x66,0x66,0x66,0xdc,0x00,0x00,0x00,0x3c,0x66,0x60,0x66,0x3c,0x00
+,0x1c,0x0c,0x7c,0xcc,0xcc,0xcc,0x76,0x00,0x00,0x00,0x3c,0x66,0x7e,0x60,0x3c,0x00
+,0x1c,0x36,0x30,0x78,0x30,0x30,0x78,0x00,0x00,0x00,0x3e,0x66,0x66,0x3e,0x06,0x7c
+,0xe0,0x60,0x6c,0x76,0x66,0x66,0xe6,0x00,0x18,0x00,0x38,0x18,0x18,0x18,0x3c,0x00
+,0x06,0x00,0x0e,0x06,0x06,0x66,0x66,0x3c,0xe0,0x60,0x66,0x6c,0x78,0x6c,0xe6,0x00
+,0x38,0x18,0x18,0x18,0x18,0x18,0x3c,0x00,0x00,0x00,0x6c,0xfe,0xd6,0xd6,0xc6,0x00
+,0x00,0x00,0xdc,0x66,0x66,0x66,0x66,0x00,0x00,0x00,0x3c,0x66,0x66,0x66,0x3c,0x00
+,0x00,0x00,0xdc,0x66,0x66,0x7c,0x60,0xf0,0x00,0x00,0x76,0xcc,0xcc,0x7c,0x0c,0x1e
+,0x00,0x00,0xdc,0x76,0x60,0x60,0xf0,0x00,0x00,0x00,0x3c,0x60,0x3c,0x06,0x7c,0x00
+,0x30,0x30,0x7c,0x30,0x30,0x36,0x1c,0x00,0x00,0x00,0x66,0x66,0x66,0x66,0x3e,0x00
+,0x00,0x00,0x66,0x66,0x66,0x3c,0x18,0x00,0x00,0x00,0xc6,0xd6,0xd6,0xfe,0x6c,0x00
+,0x00,0x00,0xc6,0x6c,0x38,0x6c,0xc6,0x00,0x00,0x00,0x66,0x66,0x66,0x3e,0x06,0x7c
+,0x00,0x00,0x7e,0x4c,0x18,0x32,0x7e,0x00,0x0e,0x18,0x18,0x70,0x18,0x18,0x0e,0x00
+,0x18,0x18,0x18,0x18,0x18,0x18,0x18,0x00,0x70,0x18,0x18,0x0e,0x18,0x18,0x70,0x00
+,0x76,0xdc,0x00,0x00,0x00,0x00,0x00,0x00,0xcc,0x33,0xcc,0x33,0xcc,0x33,0xcc,0x33
+
+
+//caracter adicional para menu - franja de color de spectrum
+
+        ,       1
+        ,       3
+        ,       7
+        ,       15
+        ,       31
+        ,       63
+        ,       127
+        ,       255
+
+//129
+//caracter adicional para menu - enye minuscula
+,0xfe ,0x00 ,0xdc ,0x66 ,0x66 ,0x66 ,0x66 ,0x00
+
+//CYRILLIC SMALL LETTER I и. 130
+,0x00 ,0x42  ,0x46 ,0x4a ,0x52 ,0x62 ,0x42 ,0x00,
+
+//Cyrillic Ш - 131
+0x00,0x54,0x54,0x54,0x54,0x54,0x7C,0x00,
+
+//Cyrillic л - 132
+0x00,0x00,0x1E,0x22,0x22,0x22,0x42,0x00,
+
+//Cyrillic г - 133
+0x00,0x00,0x3C,0x20,0x20,0x20,0x20,0x00,
+
+//Cyrillic ч - 134
+0x00,0x00,0x44,0x44,0x44,0x3C,0x04,0x04,
+
+//Cyrillic д - 135
+0x00,0x1C,0x24,0x24,0x44,0x7E,0x42,0x42,
+
+//Cyrillic я - 136
+0x00,0x00,0x3c,0x44,0x3c,0x24,0x44,0x00,
+
+//Letra minuscula r con anzuelo ɾ - 137
+0x00,0x00,0x18,0x24,0x20,0x20,0x20,0x00,
+
+//Greek Small Letter Theta θ - 138
+0x3c,0x42,0x42,0x7e,0x42,0x42,0x3c,0x00,
+
+//Caracter boton cierre BeOS - 139
+0,62,34,34,34,62,0,0,
+
+//Caracter boton cierre Turbovision - 140
+0,63,63,63,63,63,63,0,
+
+//Caracter logo apple - 141
+0x08,0x10,0x78,0xFC,0xF8,0xFC,0x78,0x00,
+
+//á a acentuada - 142
+0x08,0x10,0x38,0x04,0x3C,0x44,0x3C,0x00,
+
+//é e acentuada - 143
+0x08,0x10,0x38,0x44,0x78,0x40,0x3C,0x00,
+
+//í i acentuada - 144
+0x08,0x10,0x00,0x30,0x10,0x10,0x38,0x00,
+
+//ó o acentuada - 145
+0x08,0x10,0x38,0x44,0x44,0x44,0x38,0x00,
+
+//ú u acentuada - 146
+0x08,0x10,0x44,0x44,0x44,0x44,0x38,0x00,
+
+//Ñ enye mayuscula - 147
+0x7C,0x00,0x44,0x64,0x54,0x4C,0x44,0x00,
+
+//Caracter fondo titulo RetroMac - 148
+0,255,0,255,0,255,0,0,
+
+//Caracter background titulo - 149. Este 149 se uso por primera vez en AmigaOS
+0,255,145,163,197,137,255,0,
+
+//Caracter minimizar - 150
+255,129,129,255,129,129,255,0,
+
+//Caracter restaurar - 151
+255,129,255,129,255,129,255,0
+
+};
 
 
 //Extraido con ./bin_sprite_to_c pruebamsxchar.bin 8 96
